--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
               <!-- Begin Profile -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
+                 <a href="students/marty_mcfly.html">
                   <img width="304" height="304" class="prof-image" src="img/students/doc_brown_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="doc brown">
                 </div>
 
@@ -135,7 +136,7 @@
                 <div class="clear"></div>
               </li>
               <!-- End Profile -->
-              
+
               <!-- Duplicate li code block above to place more students here -->
 
             </ul>
