--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
               <!-- Begin Profile -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                 <a href="students/marty_mcfly.html">
+
                   <img width="304" height="304" class="prof-image" src="img/students/doc_brown_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="doc brown">
                 </div>
-
+                 <a href="students/doc_brown.html">
                <div class="blog-title">
                   <div class="big-comment">
                     <h3>Doc Brown</h3>
